--- a/src/components/ThemeToggler.astro
+++ b/src/components/ThemeToggler.astro
@@ -4,7 +4,7 @@ import Icon from "./Icon.astro";
 
 <button
     id="theme-toggle"
-    class="theme-toggle inline-flex items-center justify-center"
+    class="theme-toggle inline-flex items-center justify-center box-glow"
     aria-label="Toggle dark mode"
 >
     <Icon icon="sun" class="on-dark" />
