--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -27,8 +27,12 @@
 	--color-accent-soft: rgba(37, 99, 235, 0.08);
 
 	/* Header */
-	--color-header-bg: rgba(255, 255, 255, 0.8);
+	--color-header-bg: rgba(40, 1, 124, 0.8);
 	--color-header-border: rgba(229, 231, 235, 1);
+	--_shadow-size: 1.5em;
+	--_shadow-color: #fff;
+	--_shadow-color-off: #000;
+
 
 }
 
@@ -39,6 +43,9 @@
 }
 
 :root.dark {
+	--_shadow-color: #f09;
+	--_shadow-color-off: #fff;
+
 	color-scheme: dark;
 
 	/* Surfaces */
@@ -88,4 +95,74 @@ a:hover {
 
 html {
 	scroll-behavior: smooth;
+}
+
+@keyframes pulsate_text {
+	100% {
+		/* Larger blur radius */
+		text-shadow:
+			0 0 4px #fff,
+			0 0 11px #fff,
+			0 0 19px #fff,
+			0 0 60px var(--_shadow-color),
+			0 0 100px var(--_shadow-color),
+			0 0 110px var(--_shadow-color),
+			0 0 120px var(--_shadow-color),
+			0 0 170px var(--_shadow-color);
+	}
+
+	0% {
+		/* A slightly smaller blur radius */
+		text-shadow:
+			0 0 4px #fff,
+			0 0 10px #fff,
+			0 0 18px #fff,
+			0 0 38px var(--_shadow-color),
+			0 0 73px var(--_shadow-color),
+			0 0 80px var(--_shadow-color),
+			0 0 94px var(--_shadow-color),
+			0 0 140px var(--_shadow-color);
+	}
+}
+
+@keyframes pulsate_box {
+	100% {
+		/* Larger blur radius */
+		box-shadow:
+			0 0 4px #fff,
+			0 0 11px #fff,
+			0 0 19px #fff,
+			0 0 60px var(--_shadow-color),
+			0 0 100px var(--_shadow-color),
+			0 0 110px var(--_shadow-color),
+			0 0 120px var(--_shadow-color),
+			0 0 170px var(--_shadow-color);
+	}
+
+	0% {
+		/* A slightly smaller blur radius */
+		box-shadow:
+			0 0 4px #fff,
+			0 0 10px #fff,
+			0 0 18px #fff,
+			0 0 38px var(--_shadow-color),
+			0 0 73px var(--_shadow-color),
+			0 0 80px var(--_shadow-color),
+			0 0 94px var(--_shadow-color),
+			0 0 140px var(--_shadow-color);
+	}
+}
+
+.text-glow:active,
+.text-glow:hover,
+.text-glow:focus {
+	animation: pulsate_text 0.11s ease-in-out infinite alternate;
+
+}
+
+.box-glow:active,
+.box-glow:hover,
+.box-glow:focus {
+	animation: pulsate_box 0.11s ease-in-out infinite alternate;
+
 }
