Adds menu selection

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -105,11 +105,11 @@ html {
 			0 0 4px var(--_shadow-color-off),
 			0 0 11px var(--_shadow-color-off),
 			0 0 19px var(--_shadow-color-off),
-			0 0 60px var(--_shadow-color),
+			0 0 40px var(--_shadow-color),
+			0 0 80px var(--_shadow-color),
+			0 0 90px var(--_shadow-color),
 			0 0 100px var(--_shadow-color),
-			0 0 110px var(--_shadow-color),
-			0 0 120px var(--_shadow-color),
-			0 0 170px var(--_shadow-color);
+			0 0 150px var(--_shadow-color);
 	}
 
 	0% {
@@ -133,11 +133,11 @@ html {
 			0 0 4px var(--_shadow-color-off),
 			0 0 11px var(--_shadow-color-off),
 			0 0 19px var(--_shadow-color-off),
-			0 0 60px var(--_shadow-color),
+			0 0 40px var(--_shadow-color),
+			0 0 80px var(--_shadow-color),
+			0 0 90px var(--_shadow-color),
 			0 0 100px var(--_shadow-color),
-			0 0 110px var(--_shadow-color),
-			0 0 120px var(--_shadow-color),
-			0 0 170px var(--_shadow-color);
+			0 0 150px var(--_shadow-color);
 	}
 
 	0% {
@@ -178,4 +178,9 @@ html {
 	.text-glow:focus {
 		animation: none;
 	}
+}
+
+a.active {
+	font-weight: bolder;
+	text-decoration: underline;
 }
