Moves animation to separate file

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@import "./animations.css";
 @custom-variant dark (&:where(.dark, .dark *));
 
 :root {
@@ -96,127 +97,6 @@ a:hover {
 
 html {
 	scroll-behavior: smooth;
-}
-
-@keyframes pulsate_text {
-	100% {
-		/* Larger blur radius */
-		text-shadow:
-			0 0 4px var(--_shadow-color-off),
-			0 0 11px var(--_shadow-color-off),
-			0 0 19px var(--_shadow-color-off),
-			0 0 40px var(--_shadow-color),
-			0 0 80px var(--_shadow-color),
-			0 0 90px var(--_shadow-color),
-			0 0 100px var(--_shadow-color),
-			0 0 150px var(--_shadow-color);
-	}
-
-	0% {
-		/* A slightly smaller blur radius */
-		text-shadow:
-			0 0 4px var(--_shadow-color-off),
-			0 0 10px var(--_shadow-color-off),
-			0 0 18px var(--_shadow-color-off),
-			0 0 38px var(--_shadow-color),
-			0 0 73px var(--_shadow-color),
-			0 0 80px var(--_shadow-color),
-			0 0 94px var(--_shadow-color),
-			0 0 140px var(--_shadow-color);
-	}
-}
-
-@keyframes pulsate_text_reverse {
-	100% {
-		/* Larger blur radius */
-		text-shadow:
-			0 0 4px var(--_shadow-color),
-			0 0 11px var(--_shadow-color),
-			0 0 19px var(--_shadow-color),
-			0 0 40px var(--_shadow-color-off),
-			0 0 80px var(--_shadow-color-off),
-			0 0 90px var(--_shadow-color-off),
-			0 0 100px var(--_shadow-color-off),
-			0 0 150px var(--_shadow-color-off);
-	}
-
-	0% {
-		/* A slightly smaller blur radius */
-		text-shadow:
-			0 0 4px var(--_shadow-color),
-			0 0 10px var(--_shadow-color),
-			0 0 18px var(--_shadow-color),
-			0 0 38px var(--_shadow-color-off),
-			0 0 73px var(--_shadow-color-off),
-			0 0 80px var(--_shadow-color-off),
-			0 0 94px var(--_shadow-color-off),
-			0 0 140px var(--_shadow-color-off);
-	}
-}
-
-@keyframes pulsate_box {
-	100% {
-		/* Larger blur radius */
-		box-shadow:
-			0 0 4px var(--_shadow-color-off),
-			0 0 11px var(--_shadow-color-off),
-			0 0 19px var(--_shadow-color-off),
-			0 0 40px var(--_shadow-color),
-			0 0 80px var(--_shadow-color),
-			0 0 90px var(--_shadow-color),
-			0 0 100px var(--_shadow-color),
-			0 0 150px var(--_shadow-color);
-	}
-
-	0% {
-		/* A slightly smaller blur radius */
-		box-shadow:
-			0 0 4px var(--_shadow-color-off),
-			0 0 10px var(--_shadow-color-off),
-			0 0 18px var(--_shadow-color-off),
-			0 0 38px var(--_shadow-color),
-			0 0 73px var(--_shadow-color),
-			0 0 80px var(--_shadow-color),
-			0 0 94px var(--_shadow-color),
-			0 0 140px var(--_shadow-color);
-	}
-}
-
-.text-glow:active,
-.text-glow:hover,
-.text-glow:focus {
-	animation: pulsate_text var(--_pulse-duration) ease-in-out infinite alternate;
-
-}
-
-.light {
-
-	.text-glow:active,
-	.text-glow:hover,
-	.text-glow:focus {
-		animation: pulsate_text_reverse var(--_pulse-duration) ease-in-out infinite alternate;
-
-	}
-}
-
-
-.box-glow:active,
-.box-glow:hover,
-.box-glow:focus {
-	animation: pulsate_box var(--_pulse-duration) ease-in-out infinite alternate;
-
-}
-
-@media screen and (prefers-reduced-motion) {
-
-	.box-glow:active,
-	.box-glow:hover,
-	.box-glow:focus,
-	.text-glow:active,
-	.text-glow:hover,
-	.text-glow:focus {
-		animation: none;
-	}
 }
 
 a.active {
