--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -6,7 +6,10 @@ type Props = HTMLAttributes<"a">;
 const { href, class: className, ...props } = Astro.props;
 const pathname = Astro.url.pathname.replace(import.meta.env.BASE_URL, "");
 const subpath = pathname.match(/[^\/]+/g);
-const isActive = href === pathname || href === "/" + (subpath?.[0] || "");
+const base = import.meta.env.BASE_URL!;
+const sanitizedHref = `${href}`.replace(base, "");
+const isActive =
+    sanitizedHref === pathname || href === "/" + (subpath?.[0] || "");
 const defaultClasses: any = [
     "text-sm",
     "font-medium",
