--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -4,10 +4,14 @@ import type { HTMLAttributes } from "astro/types";
 type Props = HTMLAttributes<"a">;
 
 const { href, class: className, ...props } = Astro.props;
-const pathname = Astro.url.pathname.replace(import.meta.env.BASE_URL, "");
-const subpath = pathname.match(/[^\/]+/g);
 const base = import.meta.env.BASE_URL!;
-const sanitizedHref = `${href}`.replace(base, "");
+
+const pathname = Astro.url.pathname
+    .replace(import.meta.env.BASE_URL, "")
+    .replace(/$\\/, "");
+const subpath = pathname.match(/[^\/]+/g);
+const sanitizedHref = `${href}`.replace(base, "").replace(/$\\/, "");
+
 const isActive =
     sanitizedHref === pathname || href === "/" + (subpath?.[0] || "");
 const defaultClasses: any = [
